--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,13 +1,16 @@
 body {
-  margin: 0;
+  margin: 0; /*removes default margin*/
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    /*Use system font stack*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /*improve font rendering*/
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    /*monospace font stack*/
 }
