--- a/fe/src/assets/scss/custom/structure/_topbar.scss
+++ b/fe/src/assets/scss/custom/structure/_topbar.scss
@@ -184,6 +184,8 @@
         padding-bottom: 10px;
         padding-left: 25px;
         box-shadow: 0px 3px 10px 0px rgba($dark, 0.08);
+
+
     }
 }
 
@@ -251,6 +253,9 @@ body[data-bs-theme='dark'] {
 
     .navbar-collapse {
         background-color: $gray-900;
+		.nav-item .nav-link {
+			color: #fff;
+		}
         // box-shadow: 0px 3px 10px 0px rgba($gray-dark-600, 0.08);
     }
 }
